# sse-mkdocs-exercise

./: 404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml
compilation-and-installation/: index.html
docs/: compilation-and-installation.md  how-to.md  index.md
how-to/: index.html
search/: search_index.json
